// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailsBox.Aside > match snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-1 flex-1"
  />
</div>
`;

exports[`DetailsBox.AsideContent > match snapshot 1`] = `
<div>
  <p
    class="text-sm text-black whitespace-pre-line"
  />
</div>
`;

exports[`DetailsBox.AsideHeader > match snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-2"
  >
    <h2
      class="font-bold"
    />
    <div
      class="w-full h-px bg-pinkish-gray"
    />
  </div>
</div>
`;

exports[`DetailsBox.Content > match snapshot 1`] = `
<div>
  <div
    class="flex flex-col md:flex-row md:justify-between w-full gap-12 lg:gap-24"
  />
</div>
`;

exports[`DetailsBox.Footer > match snapshot 1`] = `
<div>
  <div
    class="flex flex-1 w-full"
  />
</div>
`;

exports[`DetailsBox.Header > match snapshot 1`] = `
<div>
  <div>
    <h1
      class="text-lg text-black font-bold"
    />
  </div>
</div>
`;

exports[`DetailsBox.Root > match snapshot 1`] = `
<div>
  <main
    class="flex flex-1 justify-center items-start px-4 pb-4"
  >
    <div
      class="rounded-lg bg-white p-6 shadow-sm flex flex-col w-full md:max-w-2/3 min-h-full md:min-h-2/3 gap-8"
    />
  </main>
</div>
`;
